<?xml version="1.0"?>
<package>
  <name>agv_description</name>
  <version>1.1.0</version>
  <description>agv_description</description>

  <author>ake</author>
  <maintainer email="kereme@acd.com">TODO</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
