<?xml version="1.0"?>
<package>
  <name>agv_simulation</name>
  <version>1.1.1</version>
  <description>agv simulation package</description>

  <author>ake</author>
  <maintainer email="kereme@acd.com">ake</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>gazebo_ros</run_depend>

</package>
